> The Ladybug should be smaller - more similar to size of bugs in Rotation.
> Fixed: - Vectors in remote are not sized to the same relative proportions as they are on the bug. For example, accel vector is very small on bug, very large in remote.
> Set circular motion speed so that dots match up exactly in trace
> Set elliptical motion speed so that dots match up exactly in trace

# 1.20.18 (27515) 01-21-2009
> Changed velocity color to green
> Changed acceleration color to pink
> Changed position to blue
> Changed line trace to have same color as position
> Added a dot to the center of the Remote Control
> Made ladybug arrow vectors 1/4 as wide
> Removed clock from RecordingControl
> Fixed trace to only show last 30 seconds
> Increased play area acceleration vector length (by factor of 1.2)
> Decreased play area velocity vector length (multiplied by 0.55)
> Disabled motions during playback
> (add developer control for investigation) Should be able to set a value to the Remote Control, and have it remain even after releasing mouse button.
> (add dev control) Remote Control should act as an indicator as well as controller
> Added dev control for timeline length
> Added developer controls to simulate options for returning to record mode
> Improved performance during record, motion is much smoother
> Made aspect ratio square

# 1.20.17 (27410) 01-17-2009
# 1.20.16 (27408) 01-17-2009
# 1.20.15 (27365) 01-16-2009
# 1.20.14 (27363) 01-16-2009
> Added stubs for control panel, graphics for vectors & path
# 1.20.13 (27304) 01-14-2009
# 1.20.12 (27302) 01-14-2009
# 1.20.11 (27301) 01-14-2009
# 1.20.10 (27300) 01-14-2009
> Improved coordinate frames, updated Java Version Checker
# 1.20.09 (27226) 01-13-2009
Added test simulation for ladybug-2d
10-08-2008: use PhetApplicationConfig.launchSim

1.20.08 (9-29-2008)
Removed speed control slider

8-30-2007: Slider wiggle me is hidden when user enters text in a text box.